--- a/HtmlPage.html
+++ b/HtmlPage.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-
+<h1>Testing testing..</h1>
+<h2>Testing testing...</h2>
 <body>
     <header>
-        <h1>broStats</h1>
+        <h1>BroStats</h1>
     </header>
 
 </body>
