--- a/HtmlPage.html
+++ b/HtmlPage.html
@@ -6,6 +6,7 @@
 </head>
 <h1>Testing testing..</h1>
 <h2>Testing testing...</h2>
+<h3>Testing testing....</h3>
 <body>
     <header>
         <h1>BroStats</h1>
