--- a/HtmlPage.html
+++ b/HtmlPage.html
@@ -8,6 +8,7 @@
 <h2>Testing testing...</h2>
 <h3>Testing testing....</h3>
 <h4>Oh yeaaa we did it!!</h4>
+<h4>Oh yeaaa we did it!!</h4>
 <body>
     <header>
         <h1>BroStats</h1>
